--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
+extends = ldap.cfg
 parts =
+    python-ldap
     instance
     test
 
@@ -31,6 +33,7 @@ bda.bfg.tile            = git git@github.com:bluedynamics/bda.bfg.tile.git
 bda.bfg.app             = git git@github.com:bluedynamics/bda.bfg.app.git
 bda.ldap                = git git@github.com:bluedynamics/bda.ldap.git
 bdajax                  = svn https://svn.plone.org/svn/collective/bdajax/trunk
+bda.intellidatetime     = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
 
 [instance]
 recipe = zc.recipe.egg:scripts
