add coverage test

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ parts =
     python-ldap
     instance
     test
+    coverage
 
 versions = versions
 extensions = 
@@ -51,3 +52,11 @@ eggs =
     bda.bfg.tile[test]
     bda.bfg.app[test]
     bda.bfg.ugm[test]
+
+[coverage]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/sh
+    ./bin/test --coverage ../../coverage -v --auto-progress "$@"
+output = ${buildout:directory}/bin/coverage
+mode = 755
