ldap.cfg for new testing, bda.ldap tests run from here

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,6 +52,9 @@ eggs =
     bda.bfg.tile[test]
     bda.bfg.app[test]
     bda.bfg.ugm[test]
+    bda.ldap[test]
+environment = testenv
+defaults = ['--auto-color', '--auto-progress']
 
 [coverage]
 recipe = collective.recipe.template
