--- a/ldap.cfg
+++ b/ldap.cfg
@@ -4,9 +4,9 @@
 recipe = zc.recipe.cmmi>=1.1.5
 url = ftp://sunsite.cnlab-switch.ch/mirror/OpenLDAP/openldap-release/openldap-2.4.20.tgz
 extra_options = --with-sasl --with-tls --enable-slapd=yes
-patch = ${buildout:directory}/patches/getpeereid.patch
-patch_options = -p0
-#environment = CPPFLAGS=-D_GNU_SOURCE
+# XXX: uncomment for non-gnu systems
+environment = CPPFLAGS=-D_GNU_SOURCE
+# XXX: maybe also CFLAGS needed?
 
 [python-ldap]
 recipe = zc.recipe.egg:custom
@@ -19,9 +19,7 @@ rpath =
 	${openldap:location}/lib
 
 [testenv]
-TESTLDIF = ${buildout:directory}/testenv/data.ldif
-PRINCSLDIF = ${buildout:directory}/testenv/principals.ldif
-SLAPDBIN = ${openldap:location}/libexec/slapd
-LDAPADDBIN = ${openldap:location}/bin/ldapadd
-LDAPPIDFILE = ${openldap:location}/var/run/slapd.pid
-DBDIR = ${buildout:parts-directory}/openldap/var/openldap-data
+LDAP_ADD_BIN = ${openldap:location}/bin/ldapadd
+LDAP_DELETE_BIN = ${openldap:location}/bin/ldapdelete
+SLAPD_BIN = ${openldap:location}/libexec/slapd
+SLAPD_URIS = ldap://127.0.0.1:12345
