ldap test server for app wip

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ extends = ldap.cfg
 parts =
     python-ldap
     instance
+    testldap
     test
     coverage
 
@@ -41,6 +42,16 @@ recipe = zc.recipe.egg:scripts
 dependent-scripts = true
 eggs =
     bda.bfg.ugm
+
+[testldap]
+recipe = zc.recipe.egg:custom
+egg = 
+    bda.ldap[test]
+initialization = 
+    os.environ['SLAPD_BIN'] = ${testenv:LDAP_ADD_BIN}
+    os.environ['SLAPD_URIS'] = ${testenv:SLAPD_URIS}
+    os.environ['LDAP_DELETE_BIN'] = ${testenv:LDAP_DELETE_BIN}
+    os.environ['LDAP_ADD_BIN'] = ${testenv:LDAP_ADD_BIN}
 
 [test]
 recipe = zc.recipe.testrunner
