ldap test server script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -44,14 +44,15 @@ eggs =
     bda.bfg.ugm
 
 [testldap]
-recipe = zc.recipe.egg:custom
-egg = 
+recipe = zc.recipe.egg:script
+eggs = 
     bda.ldap[test]
-initialization = 
-    os.environ['SLAPD_BIN'] = ${testenv:LDAP_ADD_BIN}
-    os.environ['SLAPD_URIS'] = ${testenv:SLAPD_URIS}
-    os.environ['LDAP_DELETE_BIN'] = ${testenv:LDAP_DELETE_BIN}
-    os.environ['LDAP_ADD_BIN'] = ${testenv:LDAP_ADD_BIN}
+initialization =
+    import os
+    os.environ['SLAPD_BIN'] = '${testenv:LDAP_ADD_BIN}'
+    os.environ['SLAPD_URIS'] = '${testenv:SLAPD_URIS}'
+    os.environ['LDAP_DELETE_BIN'] = '${testenv:LDAP_DELETE_BIN}'
+    os.environ['LDAP_ADD_BIN'] = '${testenv:LDAP_ADD_BIN}'
 
 [test]
 recipe = zc.recipe.testrunner
