buildout fix for standalone test ldap server scrip

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -49,7 +49,7 @@ eggs =
     bda.ldap[test]
 initialization =
     import os
-    os.environ['SLAPD_BIN'] = '${testenv:LDAP_ADD_BIN}'
+    os.environ['SLAPD_BIN'] = '${testenv:SLAPD_BIN}'
     os.environ['SLAPD_URIS'] = '${testenv:SLAPD_URIS}'
     os.environ['LDAP_DELETE_BIN'] = '${testenv:LDAP_DELETE_BIN}'
     os.environ['LDAP_ADD_BIN'] = '${testenv:LDAP_ADD_BIN}'
