--- a/etc/ldap.cfg
+++ b/etc/ldap.cfg
@@ -1,8 +1,8 @@
 [properties]
 users_dn = ou=users,dc=example,dc=com
-server = localhost
-user = cn=admin,dc=example,dc=com
+server = 127.0.0.1
+user = cn=Manager,dc=my-domain,dc=com
 password = secret
 groups_dn = ou=groups,dc=example,dc=com
-port = 389
+port = 12345
 
