work on settings

--- a/etc/ldap.cfg
+++ b/etc/ldap.cfg
@@ -1,5 +1,5 @@
 [properties]
-users_dn = ou=users,dc=example,dc=com
+users_dn = ou=users300,dc=my-domain,dc=com
 server = 127.0.0.1
 user = cn=Manager,dc=my-domain,dc=com
 password = secret
