switch to uri instead of server/port; some form stuff

--- a/etc/ldap.cfg
+++ b/etc/ldap.cfg
@@ -1,8 +1,11 @@
 [properties]
+users_query = x
+groups_scope = x
+users_scope = x
+uri = ldap://127.0.0.1:12345
 users_dn = ou=users300,dc=my-domain,dc=com
-server = 127.0.0.1
 user = cn=Manager,dc=my-domain,dc=com
 password = secret
 groups_dn = ou=groups,dc=example,dc=com
-port = 12345
+groups_query = x
 
