git sources readonly, readwrite in develop.cfg, symlinks.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,15 +25,15 @@ auto-checkout = *
 [versions]
 
 [sources]
-odict                   = git git@github.com:bluedynamics/odict.git
-zodict                  = git git@github.com:bluedynamics/zodict.git
-yafowil                 = git git@github.com:bluedynamics/yafowil.git
-yafowil.webob           = git git@github.com:bluedynamics/yafowil.webob.git
-yafowil.widget.datetime = git git@github.com:bluedynamics/yafowil.widget.datetime.git
-yafowil.widget.richtext = git git@github.com:bluedynamics/yafowil.widget.richtext.git
-bda.bfg.tile            = git git@github.com:bluedynamics/bda.bfg.tile.git
-bda.bfg.app             = git git@github.com:bluedynamics/bda.bfg.app.git
-bda.ldap                = git git@github.com:bluedynamics/bda.ldap.git
+odict                   = git git://github.com/bluedynamics/odict.git
+zodict                  = git git://github.com/bluedynamics/zodict.git
+yafowil                 = git git://github.com/bluedynamics/yafowil.git
+yafowil.webob           = git git://github.com/bluedynamics/yafowil.webob.git
+yafowil.widget.datetime = git git://github.com/bluedynamics/yafowil.widget.datetime.git
+yafowil.widget.richtext = git git://github.com/bluedynamics/yafowil.widget.richtext.git
+bda.bfg.tile            = git git://github.com/bluedynamics/bda.bfg.tile.git
+bda.bfg.app             = git git://github.com/bluedynamics/bda.bfg.app.git
+bda.ldap                = git git://github.com/bluedynamics/bda.ldap.git
 bdajax                  = svn https://svn.plone.org/svn/collective/bdajax/trunk
 bda.intellidatetime     = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
 
