--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,10 @@ find-links =
     http://dist.repoze.org/bfg/1.3/
 
 develop = .
+# XXX: zc.recipe.cmmi claims not to work with buildout 1.5, for us it does, and
+# several other recipes don't work with <1.5 anymore. Only change we made to
+# upstream is adjusting the setup.py.
+    src/zc.recipe.cmmi
 
 sources = sources
 sources-dir = ${buildout:directory}/devsrc
