--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,6 +35,7 @@ yafowil                 = git git://github.com/bluedynamics/yafowil.git
 yafowil.webob           = git git://github.com/bluedynamics/yafowil.webob.git
 yafowil.widget.datetime = git git://github.com/bluedynamics/yafowil.widget.datetime.git
 yafowil.widget.richtext = git git://github.com/bluedynamics/yafowil.widget.richtext.git
+yafowil.widget.dict     = git git://github.com/bluedynamics/yafowil.widget.dict.git
 bda.bfg.tile            = git git://github.com/bluedynamics/bda.bfg.tile.git
 bda.bfg.app             = git git://github.com/bluedynamics/bda.bfg.app.git
 bda.ldap                = git git://github.com/bluedynamics/bda.ldap.git
@@ -65,6 +66,7 @@ eggs =
     yafowil[test]
     yafowil.widget.datetime
     yafowil.widget.richtext
+    yafowil.widget.dict
     bda.bfg.tile[test]
     bda.bfg.app[test]
     bda.bfg.ugm[test]
