--- a/develop.cfg
+++ b/develop.cfg
@@ -8,6 +8,7 @@ yafowil                 = git git@github.com:bluedynamics/yafowil.git
 yafowil.webob           = git git@github.com:bluedynamics/yafowil.webob.git
 yafowil.widget.datetime = git git@github.com:bluedynamics/yafowil.widget.datetime.git
 yafowil.widget.richtext = git git@github.com:bluedynamics/yafowil.widget.richtext.git
+yafowil.widget.dict     = git git@github.com:bluedynamics/yafowil.widget.dict.git
 bda.bfg.tile            = git git@github.com:bluedynamics/bda.bfg.tile.git
 bda.bfg.app             = git git@github.com:bluedynamics/bda.bfg.app.git
 bda.ldap                = git git@github.com:bluedynamics/bda.ldap.git
