--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -8,6 +8,7 @@ develop +=
 #    src/yafowil.webob
 #    src/yafowil.widget.datetime
 #    src/yafowil.widget.richtext
+#    src/yafowil.widget.dict
 #    src/bda.bfg.tile
 #    src/bda.bfg.app
     src/bda.ldap
@@ -20,6 +21,7 @@ auto-checkout -=
 #    yafowil.webob
 #    yafowil.widget.datetime
 #    yafowil.widget.richtext
+#    yafowil.widget.dict
 #    bda.bfg.tile
 #    bda.bfg.app
     bda.ldap
