symlinks also in devsrc not src, src only for dist code

--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -2,19 +2,19 @@
 [buildout]
 extends = develop.cfg
 develop +=
-#    src/odict
-    src/zodict
-#    src/node
-#    src/yafowil
-#    src/yafowil.webob
-#    src/yafowil.widget.datetime
-#    src/yafowil.widget.richtext
-#    src/yafowil.widget.dict
-#    src/bda.bfg.tile
-#    src/bda.bfg.app
-    src/bda.ldap
-#    src/bdajax
-#    src/bda.intellidatetime
+#    devsrc/odict
+    devsrc/zodict
+#    devsrc/node
+#    devsrc/yafowil
+#    devsrc/yafowil.webob
+#    devsrc/yafowil.widget.datetime
+#    devsrc/yafowil.widget.richtext
+#    devsrc/yafowil.widget.dict
+#    devsrc/bda.bfg.tile
+#    devsrc/bda.bfg.app
+    devsrc/bda.ldap
+#    devsrc/bdajax
+#    devsrc/bda.intellidatetime
 auto-checkout -= 
 #    odict
     zodict
