include node in buildout

--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -4,6 +4,7 @@ extends = develop.cfg
 develop +=
 #    src/odict
     src/zodict
+#    src/node
 #    src/yafowil
 #    src/yafowil.webob
 #    src/yafowil.widget.datetime
@@ -17,6 +18,7 @@ develop +=
 auto-checkout -= 
 #    odict
     zodict
+#    node
 #    yafowil
 #    yafowil.webob
 #    yafowil.widget.datetime
