moved testlap and parts to ldap.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,8 @@
 [buildout]
 # lxml requirements - apt-get install libxml2-dev libxslt1-dev
 extends = ldap.cfg
-parts =
-    python-ldap
+parts +=
     instance
-    testldap
     test
     coverage
 
@@ -49,17 +47,6 @@ recipe = zc.recipe.egg:scripts
 dependent-scripts = true
 eggs =
     bda.bfg.ugm
-
-[testldap]
-recipe = zc.recipe.egg:script
-eggs = 
-    bda.ldap[test]
-initialization =
-    import os
-    os.environ['SLAPD_BIN'] = '${testenv:SLAPD_BIN}'
-    os.environ['SLAPD_URIS'] = '${testenv:SLAPD_URIS}'
-    os.environ['LDAP_DELETE_BIN'] = '${testenv:LDAP_DELETE_BIN}'
-    os.environ['LDAP_ADD_BIN'] = '${testenv:LDAP_ADD_BIN}'
 
 [test]
 recipe = zc.recipe.testrunner
