--- a/ldap.cfg
+++ b/ldap.cfg
@@ -1,3 +1,10 @@
+[buildout]
+parts =
+    openldap
+    python-ldap
+    testldap
+
+
 [openldap]
 # this build needs (on debian based systems):
 # apt-get install libsasl2-dev libssl-dev libdb-dev
@@ -7,6 +14,7 @@ extra_options = --with-sasl --with-tls --enable-slapd=yes
 # XXX: uncomment for non-gnu systems
 environment = CPPFLAGS=-D_GNU_SOURCE
 # XXX: maybe also CFLAGS needed?
+
 
 [python-ldap]
 recipe = zc.recipe.egg:custom
@@ -18,8 +26,21 @@ library-dirs  =
 rpath = 
 	${openldap:location}/lib
 
+
 [testenv]
 LDAP_ADD_BIN = ${openldap:location}/bin/ldapadd
 LDAP_DELETE_BIN = ${openldap:location}/bin/ldapdelete
 SLAPD_BIN = ${openldap:location}/libexec/slapd
 SLAPD_URIS = ldap://127.0.0.1:12345
+
+
+[testldap]
+recipe = zc.recipe.egg:script
+eggs =
+    bda.ldap[test]
+initialization =
+    import os
+    os.environ['SLAPD_BIN'] = '${testenv:SLAPD_BIN}'
+    os.environ['SLAPD_URIS'] = '${testenv:SLAPD_URIS}'
+    os.environ['LDAP_DELETE_BIN'] = '${testenv:LDAP_DELETE_BIN}'
+    os.environ['LDAP_ADD_BIN'] = '${testenv:LDAP_ADD_BIN}'
