added node to buildout

--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -2,6 +2,7 @@
 [buildout]
 extends = develop.cfg
 develop +=
+    devsrc/node
 #    devsrc/odict
     devsrc/zodict
 #    devsrc/node
@@ -16,6 +17,7 @@ develop +=
 #    devsrc/bdajax
 #    devsrc/bda.intellidatetime
 auto-checkout -= 
+    node
 #    odict
     zodict
 #    node
