--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ auto-checkout = *
 [versions]
 
 [sources]
+node                    = git git://github.com/bluedynamics/node.git
 odict                   = git git://github.com/bluedynamics/odict.git
 zodict                  = git git://github.com/bluedynamics/zodict.git
 node                    = git git://github.com/bluedynamics/node.git
