--- a/develop.cfg
+++ b/develop.cfg
@@ -2,6 +2,7 @@
 extends = buildout.cfg
 
 [sources]
+node                    = git git@github.com:bluedynamics/node.git
 odict                   = git git@github.com:bluedynamics/odict.git
 zodict                  = git git@github.com:bluedynamics/zodict.git
 node                    = git git@github.com:bluedynamics/node.git
