--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -3,9 +3,8 @@
 extends = develop.cfg
 develop +=
     devsrc/node
-#    devsrc/odict
+    devsrc/odict
     devsrc/zodict
-#    devsrc/node
 #    devsrc/yafowil
 #    devsrc/yafowil.webob
 #    devsrc/yafowil.widget.datetime
@@ -18,9 +17,8 @@ develop +=
 #    devsrc/bda.intellidatetime
 auto-checkout -= 
     node
-#    odict
+    odict
     zodict
-#    node
 #    yafowil
 #    yafowil.webob
 #    yafowil.widget.datetime
