symlinks in src-links
src - code of this package
src-links - link to other package that are in the same dir as this
devsrc - code managed by mr.developer

--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -2,19 +2,19 @@
 [buildout]
 extends = develop.cfg
 develop +=
-    devsrc/node
-    devsrc/odict
-    devsrc/zodict
-#    devsrc/yafowil
-#    devsrc/yafowil.webob
-#    devsrc/yafowil.widget.datetime
-#    devsrc/yafowil.widget.richtext
-#    devsrc/yafowil.widget.dict
-#    devsrc/bda.bfg.tile
-#    devsrc/bda.bfg.app
-    devsrc/bda.ldap
-#    devsrc/bdajax
-#    devsrc/bda.intellidatetime
+    src-links/node
+    src-links/odict
+    src-links/zodict
+#    src-links/yafowil
+#    src-links/yafowil.webob
+#    src-links/yafowil.widget.datetime
+#    src-links/yafowil.widget.richtext
+#    src-links/yafowil.widget.dict
+#    src-links/bda.bfg.tile
+#    src-links/bda.bfg.app
+    src-links/bda.ldap
+#    src-links/bdajax
+#    src-links/bda.intellidatetime
 auto-checkout -= 
     node
     odict
