pin version of zc.buildout for now, remove zc.recipe.cmmi from src folder, fix LDAP settings

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 # lxml requirements - apt-get install libxml2-dev libxslt1-dev
+version = 1.4.4
 extends = ldap.cfg
 parts +=
     instance
@@ -16,16 +17,13 @@ find-links =
     http://dist.repoze.org/bfg/1.3/
 
 develop = .
-# XXX: zc.recipe.cmmi claims not to work with buildout 1.5, for us it does, and
-# several other recipes don't work with <1.5 anymore. Only change we made to
-# upstream is adjusting the setup.py.
-    src/zc.recipe.cmmi
 
 sources = sources
 sources-dir = ${buildout:directory}/devsrc
 auto-checkout = *
 
 [versions]
+zc.buildout = 1.4.4
 
 [sources]
 node                    = git git://github.com/bluedynamics/node.git
