add zc.recipe.cmmi to sources, alter bootstrap

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,5 @@
 [buildout]
 # lxml requirements - apt-get install libxml2-dev libxslt1-dev
-version = 1.4.4
 extends = ldap.cfg
 parts +=
     instance
@@ -23,9 +22,9 @@ sources-dir = ${buildout:directory}/devsrc
 auto-checkout = *
 
 [versions]
-zc.buildout = 1.4.4
 
 [sources]
+zc.recipe.cmmi          = git git://github.com/bluedynamics/zc.recipe.cmmi.git
 node                    = git git://github.com/bluedynamics/node.git
 odict                   = git git://github.com/bluedynamics/odict.git
 zodict                  = git git://github.com/bluedynamics/zodict.git
