weird behaviour of zc.recipe.script, move testldap part last XXX: figure out why

--- a/anon.cfg
+++ b/anon.cfg
@@ -1,27 +1,5 @@
 [buildout]
-# lxml requirements - apt-get install libxml2-dev libxslt1-dev
-extends = ldap.cfg
-parts +=
-    instance
-    test
-    coverage
-
-versions = versions
-extensions = 
-    mr.developer
-
-eggs-directory = ${buildout:directory}/eggs
-
-find-links = 
-    http://dist.repoze.org/bfg/1.3/
-
-develop = .
-
-sources = sources
-sources-dir = ${buildout:directory}/devsrc
-auto-checkout = *
-
-[versions]
+extends = base.cfg
 
 [sources]
 zc.recipe.cmmi          = git git://github.com/bluedynamics/zc.recipe.cmmi.git
@@ -39,32 +17,3 @@ bda.bfg.app             = git git://github.com/bluedynamics/bda.bfg.app.git
 bda.ldap                = git git://github.com/bluedynamics/bda.ldap.git
 bdajax                  = svn https://svn.plone.org/svn/collective/bdajax/trunk
 bda.intellidatetime     = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
-
-[instance]
-recipe = zc.recipe.egg:scripts
-dependent-scripts = true
-eggs =
-    bda.bfg.ugm
-
-[test]
-recipe = zc.recipe.testrunner
-eggs =
-    zodict[test]
-    yafowil[test]
-    yafowil.widget.datetime
-    yafowil.widget.richtext
-    yafowil.widget.dict
-    bda.bfg.tile[test]
-    bda.bfg.app[test]
-    bda.bfg.ugm[test]
-    bda.ldap[test]
-environment = testenv
-defaults = ['--auto-color', '--auto-progress']
-
-[coverage]
-recipe = collective.recipe.template
-input = inline:
-    #!/bin/sh
-    ./bin/test --coverage ../../coverage -v --auto-progress "$@"
-output = ${buildout:directory}/bin/coverage
-mode = 755
