--- a/develop.cfg
+++ b/develop.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = buildout.cfg
+extends = base.cfg
 
 [sources]
 zc.recipe.cmmi          = git git@github.com:bluedynamics/zc.recipe.cmmi.git
