add autocomplete and dynatree widget to buildout, might be removed again

--- a/anon.cfg
+++ b/anon.cfg
@@ -2,18 +2,20 @@
 extends = base.cfg
 
 [sources]
-zc.recipe.cmmi          = git git://github.com/bluedynamics/zc.recipe.cmmi.git
-node                    = git git://github.com/bluedynamics/node.git
-odict                   = git git://github.com/bluedynamics/odict.git
-zodict                  = git git://github.com/bluedynamics/zodict.git
-node                    = git git://github.com/bluedynamics/node.git
-yafowil                 = git git://github.com/bluedynamics/yafowil.git
-yafowil.webob           = git git://github.com/bluedynamics/yafowil.webob.git
-yafowil.widget.datetime = git git://github.com/bluedynamics/yafowil.widget.datetime.git
-yafowil.widget.richtext = git git://github.com/bluedynamics/yafowil.widget.richtext.git
-yafowil.widget.dict     = git git://github.com/bluedynamics/yafowil.widget.dict.git
-bda.bfg.tile            = git git://github.com/bluedynamics/bda.bfg.tile.git
-bda.bfg.app             = git git://github.com/bluedynamics/bda.bfg.app.git
-bda.ldap                = git git://github.com/bluedynamics/bda.ldap.git
-bdajax                  = svn https://svn.plone.org/svn/collective/bdajax/trunk
-bda.intellidatetime     = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
+zc.recipe.cmmi              = git git://github.com/bluedynamics/zc.recipe.cmmi.git
+node                        = git git://github.com/bluedynamics/node.git
+odict                       = git git://github.com/bluedynamics/odict.git
+zodict                      = git git://github.com/bluedynamics/zodict.git
+node                        = git git://github.com/bluedynamics/node.git
+yafowil                     = git git://github.com/bluedynamics/yafowil.git
+yafowil.webob               = git git://github.com/bluedynamics/yafowil.webob.git
+yafowil.widget.datetime     = git git://github.com/bluedynamics/yafowil.widget.datetime.git
+yafowil.widget.richtext     = git git://github.com/bluedynamics/yafowil.widget.richtext.git
+yafowil.widget.dict         = git git://github.com/bluedynamics/yafowil.widget.dict.git
+yafowil.widget.autocomplete = git git://github.com/bluedynamics/yafowil.widget.autocomplete.git
+yafowil.widget.dynatree     = git git://github.com/bluedynamics/yafowil.widget.dynatree.git
+bda.bfg.tile                = git git://github.com/bluedynamics/bda.bfg.tile.git
+bda.bfg.app                 = git git://github.com/bluedynamics/bda.bfg.app.git
+bda.ldap                    = git git://github.com/bluedynamics/bda.ldap.git
+bdajax                      = svn https://svn.plone.org/svn/collective/bdajax/trunk
+bda.intellidatetime         = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
