--- a/base.cfg
+++ b/base.cfg
@@ -37,9 +37,11 @@ recipe = zc.recipe.testrunner
 eggs =
     zodict[test]
     yafowil[test]
-    yafowil.widget.datetime
-    yafowil.widget.richtext
-    yafowil.widget.dict
+    yafowil.widget.datetime[test]
+    yafowil.widget.richtext[test]
+    yafowil.widget.dict[test]
+    yafowil.widget.autocomplete[test]
+    yafowil.widget.dynatree[test]
     bda.bfg.tile[test]
     bda.bfg.app[test]
     bda.bfg.ugm[test]
