include zamqp to buildout, not integrated to application yet

--- a/base.cfg
+++ b/base.cfg
@@ -3,6 +3,7 @@
 extends = ldap.cfg
 parts +=
     instance
+    rabbitmq
     test
     coverage
     testldap
@@ -31,6 +32,11 @@ recipe = zc.recipe.egg:scripts
 dependent-scripts = true
 eggs =
     bda.bfg.ugm
+
+[rabbitmq]
+# apt-get install erlang
+recipe = rod.recipe.rabbitmq
+url = http://www.rabbitmq.com/releases/rabbitmq-server/v1.7.2/rabbitmq-server-1.7.2.tar.gz
 
 [test]
 recipe = zc.recipe.testrunner
