get rid of remaining svn dev packages

--- a/anon.cfg
+++ b/anon.cfg
@@ -18,5 +18,5 @@ bda.bfg.tile                = git git://github.com/bluedynamics/bda.bfg.tile.git
 bda.bfg.app                 = git git://github.com/bluedynamics/bda.bfg.app.git
 bda.ldap                    = git git://github.com/bluedynamics/bda.ldap.git
 zamqp                       = git git://github.com/bluedynamics/zamqp.git
-bdajax                      = svn https://svn.plone.org/svn/collective/bdajax/trunk
-bda.intellidatetime         = svn https://svn.plone.org/svn/collective/bda.intellidatetime/trunk
+bdajax                      = git git://github.com/bluedynamics/bdajax.git
+bda.intellidatetime         = git git://github.com/bluedynamics/bda.intellidatetime.git
