--- a/dev.cfg
+++ b/dev.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = base.cfg
+extends = etc/base.cfg
 
 [sources]
 zc.recipe.cmmi              = git git@github.com:bluedynamics/zc.recipe.cmmi.git
