--- a/symlinks.cfg
+++ b/symlinks.cfg
@@ -1,6 +1,6 @@
 # If you prefer symlinks to the repos laying around somwhere
 [buildout]
-extends = develop.cfg
+extends = dev.cfg
 develop +=
     src-links/node
     src-links/odict
