not enforing eggs dir to default, see etc/base.cfg comment

--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -12,7 +12,8 @@ versions = versions
 extensions = 
     mr.developer
 
-eggs-directory = ${buildout:directory}/eggs
+# why do we want to enforce to default? this kills my buildout cache
+#eggs-directory = ${buildout:directory}/eggs
 
 find-links = 
     http://dist.repoze.org/bfg/1.3/
