gitignore absolute and ignore buildout.cfg

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-.mrsd
+/.mrsd
 *.pyc
-.settings
-.project
-.pydevproject
-.installed.cfg
-.mr.developer.cfg
-src/bda.bfg.ugm.egg-info
-src/zc.recipe.cmmi/src/zc.recipe.cmmi.egg-info
-bin
-develop-eggs
-devsrc
-eggs
-parts
-downloads
-var
+/.settings
+/.project
+/.pydevproject
+/.installed.cfg
+/.mr.developer.cfg
+/src/bda.bfg.ugm.egg-info
+/src/zc.recipe.cmmi/src/zc.recipe.cmmi.egg-info
+/bin
+/buildout.cfg
+/develop-eggs
+/devsrc
+/eggs
+/parts
+/downloads
+/var
