commented also zamqp until it is used

--- a/anon-https.cfg
+++ b/anon-https.cfg
@@ -16,6 +16,6 @@ yafowil.widget.dynatree     = git https://github.com/bluedynamics/yafowil.widget
 bda.bfg.tile                = git https://github.com/bluedynamics/bda.bfg.tile.git
 bda.bfg.app                 = git https://github.com/bluedynamics/bda.bfg.app.git
 bda.ldap                    = git https://github.com/bluedynamics/bda.ldap.git
-zamqp                       = git https://github.com/bluedynamics/zamqp.git
+#zamqp                       = git https://github.com/bluedynamics/zamqp.git
 bdajax                      = git https://github.com/bluedynamics/bdajax.git
 bda.intellidatetime         = git https://github.com/bluedynamics/bda.intellidatetime.git
