--- a/dev.cfg
+++ b/dev.cfg
@@ -16,6 +16,6 @@ yafowil.widget.dynatree     = git git@github.com:bluedynamics/yafowil.widget.dyn
 bda.bfg.tile                = git git@github.com:bluedynamics/bda.bfg.tile.git
 bda.bfg.app                 = git git@github.com:bluedynamics/bda.bfg.app.git
 bda.ldap                    = git git@github.com:bluedynamics/bda.ldap.git
-zamqp                       = git git@github.com:bluedynamics/zamqp.git
+#zamqp                       = git git@github.com:bluedynamics/zamqp.git
 bdajax                      = git git@github.com:bluedynamics/bdajax.git
 bda.intellidatetime         = git git@github.com:bluedynamics/bda.intellidatetime.git
