removed custom zc.recipe.cmmi, pinned buildout 1.4.4

--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -25,6 +25,8 @@ sources-dir = ${buildout:directory}/devsrc
 auto-checkout = *
 
 [versions]
+zc.buildout = 1.4.4
+zc.recipe.egg = 1.2.2
 
 [sources]
 
