--- a/anon.cfg
+++ b/anon.cfg
@@ -2,6 +2,7 @@
 extends = etc/base.cfg
 
 [sources]
+zc.recipe.cmmi              = git git://github.com/bluedynamics/zc.recipe.cmmi.git
 node                        = git git://github.com/bluedynamics/node.git
 odict                       = git git://github.com/bluedynamics/odict.git
 zodict                      = git git://github.com/bluedynamics/zodict.git
