--- a/dev.cfg
+++ b/dev.cfg
@@ -7,6 +7,7 @@ node                        = git git@github.com:bluedynamics/node.git
 odict                       = git git@github.com:bluedynamics/odict.git
 zodict                      = git git@github.com:bluedynamics/zodict.git
 yafowil                     = git git@github.com:bluedynamics/yafowil.git
+yafowil.documentation       = git git@github.com:bluedynamics/yafowil.documentation.git
 yafowil.webob               = git git@github.com:bluedynamics/yafowil.webob.git
 yafowil.widget.datetime     = git git@github.com:bluedynamics/yafowil.widget.datetime.git
 yafowil.widget.richtext     = git git@github.com:bluedynamics/yafowil.widget.richtext.git
