add odict and node tests to buildout, comment on eggs directory

--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -13,7 +13,9 @@ extensions =
     mr.developer
 
 # why do we want to enforce to default? this kills my buildout cache
-#eggs-directory = ${buildout:directory}/eggs
+# we encountered troubles using buildout cache. ask jens for details. if this
+# is obsolete now, remove it entirely
+eggs-directory = ${buildout:directory}/eggs
 
 find-links = 
     http://dist.repoze.org/bfg/1.3/
@@ -42,6 +44,8 @@ url = http://www.rabbitmq.com/releases/rabbitmq-server/v1.7.2/rabbitmq-server-1.
 [test]
 recipe = zc.recipe.testrunner
 eggs =
+    odict[test]
+    node[test]
     zodict[test]
     yafowil[test]
     yafowil.widget.datetime[test]
