--- a/etc/ldap.cfg
+++ b/etc/ldap.cfg
@@ -10,6 +10,8 @@ parts =
 recipe = zc.recipe.cmmi>=1.1.5
 url = ftp://sunsite.cnlab-switch.ch/mirror/OpenLDAP/openldap-release/openldap-2.4.20.tgz
 extra_options = --with-sasl --with-tls --enable-slapd=yes
+patch = ${buildout:directory}/patches/0001-usr-bin-file-file.patch
+patch_options = -p1
 # XXX: uncomment for non-gnu systems
 environment = CPPFLAGS=-D_GNU_SOURCE
 # XXX: maybe also CFLAGS needed?
