added plumber to sources, removed symlinks.cfg

--- a/anon-https.cfg
+++ b/anon-https.cfg
@@ -5,6 +5,7 @@ extends = etc/base.cfg
 zc.recipe.cmmi              = git https://github.com/bluedynamics/zc.recipe.cmmi.git
 node                        = git https://github.com/bluedynamics/node.git
 odict                       = git https://github.com/bluedynamics/odict.git
+plumber                     = git https://github.com/bluedynamics/plumber.git
 zodict                      = git https://github.com/bluedynamics/zodict.git
 yafowil                     = git https://github.com/bluedynamics/yafowil.git
 yafowil.webob               = git https://github.com/bluedynamics/yafowil.webob.git
