--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -40,6 +40,7 @@ url = http://www.rabbitmq.com/releases/rabbitmq-server/v1.7.2/rabbitmq-server-1.
 recipe = zc.recipe.testrunner
 eggs =
     odict[test]
+    plumber[test]
     node[test]
     zodict[test]
     yafowil[test]
