--- a/anon.cfg
+++ b/anon.cfg
@@ -5,6 +5,7 @@ extends = etc/base.cfg
 zc.recipe.cmmi              = git git://github.com/bluedynamics/zc.recipe.cmmi.git
 node                        = git git://github.com/bluedynamics/node.git
 odict                       = git git://github.com/bluedynamics/odict.git
+plumber                     = git git://github.com/bluedynamics/plumber.git
 zodict                      = git git://github.com/bluedynamics/zodict.git
 yafowil                     = git git://github.com/bluedynamics/yafowil.git
 yafowil.webob               = git git://github.com/bluedynamics/yafowil.webob.git
