works with node.ext.ldap (successor of bda.ldap)

--- a/anon-https.cfg
+++ b/anon-https.cfg
@@ -4,6 +4,7 @@ extends = etc/base.cfg
 [sources]
 zc.recipe.cmmi              = git https://github.com/bluedynamics/zc.recipe.cmmi.git
 node                        = git https://github.com/bluedynamics/node.git
+node.ext.ldap               = git https://github.com/bluedynamics/node.ext.ldap.git
 odict                       = git https://github.com/bluedynamics/odict.git
 plumber                     = git https://github.com/bluedynamics/plumber.git
 zodict                      = git https://github.com/bluedynamics/zodict.git
@@ -16,7 +17,6 @@ yafowil.widget.autocomplete = git https://github.com/bluedynamics/yafowil.widget
 yafowil.widget.dynatree     = git https://github.com/bluedynamics/yafowil.widget.dynatree.git
 bda.bfg.tile                = git https://github.com/bluedynamics/bda.bfg.tile.git
 bda.bfg.app                 = git https://github.com/bluedynamics/bda.bfg.app.git
-bda.ldap                    = git https://github.com/bluedynamics/bda.ldap.git
 #zamqp                       = git https://github.com/bluedynamics/zamqp.git
 bdajax                      = git https://github.com/bluedynamics/bdajax.git
 bda.intellidatetime         = git https://github.com/bluedynamics/bda.intellidatetime.git
