--- a/etc/base.cfg
+++ b/etc/base.cfg
@@ -42,6 +42,7 @@ eggs =
     odict[test]
     plumber[test]
     node[test]
+    node.ext.ldap[test]
     zodict[test]
     yafowil[test]
     yafowil.widget.datetime[test]
@@ -52,7 +53,6 @@ eggs =
     bda.bfg.tile[test]
     bda.bfg.app[test]
     bda.bfg.ugm[test]
-    bda.ldap[test]
 environment = testenv
 defaults = ['--auto-color', '--auto-progress']
 
