--- a/anon.cfg
+++ b/anon.cfg
@@ -4,6 +4,7 @@ extends = etc/base.cfg
 [sources]
 zc.recipe.cmmi              = git git://github.com/bluedynamics/zc.recipe.cmmi.git
 node                        = git git://github.com/bluedynamics/node.git
+node.ext.ldap               = git git://github.com/bluedynamics/node.ext.ldap.git
 odict                       = git git://github.com/bluedynamics/odict.git
 plumber                     = git git://github.com/bluedynamics/plumber.git
 zodict                      = git git://github.com/bluedynamics/zodict.git
@@ -16,7 +17,6 @@ yafowil.widget.autocomplete = git git://github.com/bluedynamics/yafowil.widget.a
 yafowil.widget.dynatree     = git git://github.com/bluedynamics/yafowil.widget.dynatree.git
 bda.bfg.tile                = git git://github.com/bluedynamics/bda.bfg.tile.git
 bda.bfg.app                 = git git://github.com/bluedynamics/bda.bfg.app.git
-bda.ldap                    = git git://github.com/bluedynamics/bda.ldap.git
 #zamqp                       = git git://github.com/bluedynamics/zamqp.git
 bdajax                      = git git://github.com/bluedynamics/bdajax.git
 bda.intellidatetime         = git git://github.com/bluedynamics/bda.intellidatetime.git
